--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,9 +2,9 @@
     <div class="ui vertical stripe segment" >
       <div class="ui middle aligned stackable grid container">
         <div class="row">
-          <div class="eight wide column">
-            <h4 id="rotate" class='ui header center atencao ' style="margin-top:-68px;">Foto: Juscimar Barão </h4>
-            <h3 class='ui header atencao ' >Evento</h3>
+          <div class="eight wide column" style="margin-top:-2em;">
+            <h4 id="rotate" class='ui header center atencao ' style="margin-top:-20px;">Foto: Juscimar Barão </h4>
+            <h3 class='ui header atencao' >Evento</h3>
             <p class='ui text justify evento' style="text-align: justify;
 text-justify: inter-word;">A VII Semana Acadêmica de Pedagogia consiste em um evento anual realizado desde 2010,
 pela Coordenação do curso de Licenciatura Plena em Pedagogia do CSHNB/UFPI. Trata-se de
@@ -24,12 +24,12 @@ fomentador da práxis educativa, referenciando os desafios globais e locais que 
 agenda pública da educação.</p>
                         <h3 class="ui header atencao">Submissão de trabalhos</h3>
             <p style="text-align: justify;
-text-justify: inter-word;">A submissão de artigos científicos é a forma mais comum de disseminar os avanços alcançados por pesquisas científicas que são desenvolvidas em diversas áreas do conhecimento. Caso queira submeter confira as normas clicando ao lado <a href="edital.pdf" class="ui tiny button  teal" >VEJA AS NORMAS</a>. Submissão dos trabalhos será até o dia 01/09/2017 e o resultado do aceite será dia 05/09/2017. Não haverá tempo hábiL para a correção de trabalhos, favor enviar os trabalhos estritamente dentro das normas. Para a apresentação de trabalhos de grupos temáticos somente será disponibilizado DATASHOW com entrada VGA, computador e adaptador fica a cargo do participante.</p>
+text-justify: inter-word;">A submissão de artigos científicos é a forma mais comum de disseminar os avanços alcançados por pesquisas científicas que são desenvolvidas em diversas áreas do conhecimento. Caso queira submeter confira as normas clicando ao lado <a href="edital.pdf" class="ui mini button  teal" >VEJA AS NORMAS.</a> Submissão dos trabalhos será até o dia 01/09/2017 e o resultado do aceite será dia 05/09/2017. Não haverá tempo hábiL para a correção de trabalhos, favor enviar os trabalhos estritamente dentro das normas. Para a apresentação de trabalhos de grupos temáticos somente será disponibilizado DATASHOW com entrada VGA, computador e adaptador fica a cargo do participante.</p>
           </div>
-          <div id="maincontent" class="six wide right floated column" style="margin-top:-23em;">
+          <div id="maincontent" class="six wide right floated column" style="margin-top:-32em;">
             <%= image_tag 'fundo.png', class: 'ui large bordered rounded image', style:'border-radius: 100px 100px 25px 25px' %>
           </div>
-          <div id="maincontent" class="eight wide right floated column" style="margin-top:-14em;">
+          <div id="maincontent" class="eight wide right floated column" style="margin-top:-32em;">
             <h3 class="ui header atencao" >Palestras</h3>
             <p style="text-align: justify;
 text-justify: inter-word;">O SAPED promoverá palestras com temas atuais e de grande interesse da academia. Possibilitando assim aos participantes reconhecerem o trabalho apresentado pelos convidados de maneira mais clara e se atualizarem dos assuntos abordados, podendo desenvolver projetos pessoais ou esclarecer dúvidas decorrentes dos temas abordados.</p>
