add conta banco

--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -52,9 +52,9 @@
   
   <div id="regInnkommende" class="ui stacked segment">
     <a class="ui blue ribbon label">Dados para pagamento</a>
-    <p style="margin-top:1em;">Banco: AGUARDE! </p>
-    <p>Agência: AGUARDE</p>
-    <p>Conta Corrente: AGUARDE Operação: AGUARDE</p>
+    <p style="margin-top:1em;">Banco: Banco do Brasil </p>
+    <p>Agência: 3791-5</p>
+    <p>Conta Corrente: 10.176-1</p>
     <p>Valor de R$ 30,00 até o dia 05 de setembro, após isso o valor será de R$ 35,00</p>
     <h5>Enviar email com comprovante para: </h5>
     <p class='ui basic blue button'>
