add novo minicurso

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -266,28 +266,36 @@ espaços da universidade.
         </div>
       </div>
       </div>
-      <!--
+      
       <div class='row'>
       <div class='seven wide column'>
-        <h4 class='ui center aligned header' >CURSO 7</h4>
+        <h4 class='ui center aligned header' >Aprender a aprender na prática: a neurociência da aprendizagem – Profª Mestre
+Patrícia Barros</h4>
         <div class='ui justify aligned text '>
           <p style="text-align: justify;
 text-justify: inter-word;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Nas últimas décadas, cientistas vêm produzindo um fluxo de sugestões potencialmente
+produtivas sobre como estudar. Infelizmente, elas raramente são apresentadas de
+forma que o aluno típico possa facilmente entendê-las e utilizá-las. Este mini curso
+deseja completar esta lacuna, apresentando estratégias simples – mas potencialmente
+poderosas – para aumentar a aprendizagem. Ele foi projetado para tornar mais fácil
+aprender qualquer conteúdo, independente das notas anteriores do aluno, ou do fato
+de ele achar que é bom ou ruim em determinada matéria. Serão abordados, dentre
+outros temas, os tipos de memória, o processo de construção de blocos de
+informações, os modos de funcionamento cerebral, as ilusões de aprendizagem e o
+processo de formação de bons hábitos de estudo. Todas as estratégias a serem
+recomendadas estão fundamentadas em evidências sólidas oriundas: a) da pesquisa
+sobre o funcionamento da mente humana e b) de levantamento realizado pela
+Universidade da California (San Diego) junto a centenas de professores reconhecidos
+como os mais proeminentes do mundo em diversas áreas a respeito das táticas de
+ensino-aprendizagem por eles adotados. Recursos oficinas: Cópias de material a ser
+impresso e disponibilizado para cada participante.
           </p>
         </div>
       </div>
-      <div class='seven wide column'>
-        <h4 class='ui center aligned header' >CURSO 8</h4>
-        <div class='ui justify aligned text '>
-          <p style="text-align: justify;
-text-justify: inter-word;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </div>
+    
       </div>
-      </div>
-      -->
+      
     </div>
       
     <h4 class="ui horizontal header divider">
