--- a/app/views/themes/reporte.pdf.erb
+++ b/app/views/themes/reporte.pdf.erb
@@ -11,7 +11,7 @@
   </head>
   <body onload='number_pages'>
     
-<h3>Pôsteres</h3>
+<h3>Grupo temático: <%= @theme.name %></h3>
     <table class="table">
         <thead>
             <tr>
