--- a/app/views/home/reporte.pdf.erb
+++ b/app/views/home/reporte.pdf.erb
@@ -8,6 +8,11 @@
     <%= wicked_pdf_javascript_include_tag "number_pages" %>
     
     <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.css" integrity="sha256-8CEI/ltDBxfGb0lev/b4YiRbQSPlllT89ukpFKC3Frg=" crossorigin="anonymous" / -->
+    <style>
+        tr, td {
+            font-size:9px !important;
+        }
+    </style>
   </head>
   <body onload='number_pages'>
     
@@ -27,13 +32,13 @@
         <tbody>
             <% User.banners.each do |user| %>
                 <tr>
-                    <td><%= user.article_title.upcase %></td>
+                    <td style="font-size:9px;"><%= user.article_title.upcase %></td>
                     <td><%= user.author_one.upcase %></td>
                     <td><%= user.author_one_cpf.upcase %></td>
                     <td><%= user.author_two.upcase %></td>
                     <td><%= user.author_two_cpf.upcase %></td>
                     <td><%= user.author_three.upcase %></td>
-                    <td><%= user.author_three.upcase %></td>
+                    <td><%= user.author_three_cpf.upcase %></td>
                 </tr>
             <% end %>
         </tbody>
