--- a/app/views/home/user_poster.html.erb
+++ b/app/views/home/user_poster.html.erb
@@ -33,7 +33,7 @@
                     <td><%= user.author_two.upcase %></td>
                     <td><%= user.author_two_cpf.upcase %></td>
                     <td><%= user.author_three.upcase %></td>
-                    <td><%= user.author_three.upcase %></td>
+                    <td><%= user.author_three_cpf.upcase %></td>
                 </tr>
             <% end %>
         </tbody>
