--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -57,7 +57,7 @@
     <p style="margin-top:1em;">Banco: Banco do Brasil </p>
     <p>Agência: 3791-5</p>
     <p>Conta Corrente: 10.176-1</p>
-    <p>Valor de R$ 30,00 até o dia 10 de setembro, após isso o valor será de R$ 35,00</p>
+    <p>Valor de R$ 30,00 </p>
     <h5>Enviar email com comprovante para: </h5>
     <p class='ui basic blue button'>
       <a href="mailto:saped-ufpi.financeira@hotmail.com?subject=Comprovante de pagamento&body=Comprovante de pagamento, adicione ao anexo o comprovante!">saped-ufpi.financeira@hotmail.com</a>
