--- a/app/views/home/reporte.pdf.erb
+++ b/app/views/home/reporte.pdf.erb
@@ -16,7 +16,7 @@
   </head>
   <body onload='number_pages'>
     
-<h3></h3>
+<h3>Trabalhos aprovados</h3>
     <table class="table">
         <thead>
             <tr>
