--- a/app/views/home/reporte.pdf.erb
+++ b/app/views/home/reporte.pdf.erb
@@ -30,7 +30,7 @@
             </tr>
         </thead>
         <tbody>
-            <% User.banners.each do |user| %>
+            <% User.poster.each do |user| %>
                 <tr>
                     <td style="font-size:9px;"><%= user.article_title.upcase %></td>
                     <td><%= user.author_one.upcase %></td>
