--- a/app/views/home/geral.pdf.erb
+++ b/app/views/home/geral.pdf.erb
@@ -3,15 +3,16 @@
   <head>
     <meta charset='utf-8' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <!--link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <%= wicked_pdf_stylesheet_link_tag "pdf" -%>
-    <%# wicked_pdf_javascript_include_tag "number_pages" %>
+    <%= wicked_pdf_javascript_include_tag "number_pages" %>
     
     <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.css" integrity="sha256-8CEI/ltDBxfGb0lev/b4YiRbQSPlllT89ukpFKC3Frg=" crossorigin="anonymous" / -->
   </head>
   <body onload='number_pages'>
     <div id="content">
-        <h3>Lista geral de pagantes - Quantidade : <%= User.confirmeds.count %></h3>
+    </div>
+     <h3>Lista geral de pagantes - Quantidade : <%= User.confirmeds.count %></h3>
         <table class="table">
             <thead>
                 <tr>
@@ -30,6 +31,5 @@
                 <% end %>
             </tbody>
         </table>
-    </div>
   </body>
 </html>
