--- a/app/views/home/admin_dashboard.html.erb
+++ b/app/views/home/admin_dashboard.html.erb
@@ -10,6 +10,7 @@
         <div class="ui bottom attached tab segment" data-tab="one">
           <h5>Confirmados</h5>
           <p><%= link_to 'Usuários confirmados', users_confirmeds_path(format: :pdf), class: 'ui button positive' %></p>
+          <%= link_to "Panilha", users_confirmeds_path(format: "xlsx") %>
           <h5>Não Confirmados</h5>
           <%= render :partial => 'home/user_table', :locals => { users: @users_unconfirmed,  show_links: true } %>
         </div>
