--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
         <div class="row">
           <div class="eight wide column" style="margin-top:-2em;">
             <h4 id="rotate" class='ui header center atencao ' style="margin-top:-20px;">Foto: Juscimar Barão </h4>
-            <h3 class='ui header atencao' >Evento</h3>
+            <h3 class='ui header atencao' >Apresentação</h3>
             <p class='ui text justify evento' style="text-align: justify;
 text-justify: inter-word;">A VII Semana Acadêmica de Pedagogia consiste em um evento anual realizado desde 2010,
 pela Coordenação do curso de Licenciatura Plena em Pedagogia do CSHNB/UFPI. Trata-se de
