--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -234,7 +234,7 @@
     <div style="margin-left:-5em;" class="ui container mainmenu">
       <a class="active item" href="/">Home</a>
       <div id="hide-menu" class="ui menu" style='background-color:#FFC70E;' >
-        <a class="item" href="#evento">Apresentação</a>
+        <a class="item" href="#evento">Programação do Evento</a>
         <a class="item" href="edital.pdf">Normas para Publicação</a>
       </div>
       <a class="item" href="expediente">Corpo Editorial</a>
