--- a/app/views/home/anais.html.erb
+++ b/app/views/home/anais.html.erb
@@ -3,6 +3,128 @@
     <div class="ui grid "  style="margin-top:3em;" >
         <h4 style="margin-left:30em;">Download dos trabalhos individualmente </h4>
         <h5 style="margin-left:-21em;"> Anais, 2017, Volume I, Número I</h5>
+       <table class="ui definition table" style="margin-top:3em;width:1024px;margin-left:10em;">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>You searched ISSN database - Title : all: Semana Acadêmica de Pedagogia AND Title : all: piaui</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                  <td>ISSN</td>
+                  <td><a href="http://portal.issn.org/cgi-bin/gw/chameleon?sessionid=2017092018102630856&skin=unrestricted&lng=en&inst=consortium&host=localhost%2b5000%2bDEFAULT&patronhost=localhost%205000%20DEFAULT&search=KEYWORD&function=INITREQ&sourcescreen=CARDSCR&pos=1&rootsearch=1&elementcount=1&u1=8&t1=%222594-7826%22&beginsrch=1">2594-7826</a></td>
+                  
+                </tr>
+                <tr>
+                  <td>ISSN-L</td>
+                  <td><a href="http://portal.issn.org/cgi-bin/gw/chameleon?sessionid=2017092018102630856&skin=unrestricted&lng=en&inst=consortium&host=localhost%2b5000%2bDEFAULT&patronhost=localhost%205000%20DEFAULT&search=KEYWORD&function=INITREQ&sourcescreen=INITREQ&pos=1&rootsearch=KEYWORD&elementcount=1&t1=%222594-7826%22&u1=12130&op1=0">2594-7826</a></td>
+                </tr>
+                <tr>
+                    <td>Medium</td>
+                    <td>Computer remote</td>
+                </tr>
+                <tr>
+                    <td>Key Title</td>
+                    <td><a href="http://portal.issn.org/cgi-bin/gw/chameleon?sessionid=2017092018102630856&skin=unrestricted&lng=en&inst=consortium&host=localhost%2b5000%2bDEFAULT&patronhost=localhost%205000%20DEFAULT&search=SCAN&function=INITREQ&sourcescreen=CARDSCR&pos=1&rootsearch=3&elementcount=1&u1=33&t1=Semana%20Acad%c3%aamica%20de%20Pedagogia%20(Universidade%20Federal%20do%20Piau%c3%ad)&beginsrch=1">Semana Acadêmica de Pedagogia (Universidade Federal do Piauí)</a></td>
+                </tr>
+                <tr>
+                    <td>First or current publisher</td>
+                    <td><a href="http://portal.issn.org/cgi-bin/gw/chameleon?sessionid=2017092018102630856&skin=unrestricted&lng=en&inst=consortium&host=localhost%2b5000%2bDEFAULT&patronhost=localhost%205000%20DEFAULT&search=SCAN&function=INITREQ&sourcescreen=CARDSCR&pos=1&rootsearch=3&elementcount=1&u1=2009&t1=Editora%20da%20Universidade%20Federal%20do%20Piau%c3%ad&beginsrch=1">Teresina, PI: Editora da Universidade Federal do Piauí</a></td>
+                </tr>
+                <tr>
+                    <td>Country of publication
+                    </td>
+                    <td>BRAZIL
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Dates of publication
+                    </td>
+                    <td>2017 / 9999 current
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                    Sequential and/or chronological designations
+                    </td>
+                    <td>Vol. 1 (2017)-
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Frequency
+                    </td>
+                    <td>Annual
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Type of publication
+                    </td>
+                    <td>Periodical
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Language
+                    </td>
+                    <td>Portuguese
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Title script
+                    </td>
+                    <td>Extended roman
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Title proper
+                    </td>
+                    <td>Semana Acadêmica de Pedagogia.
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Abbreviated key title 	
+                    </td>
+                    <td><a href="http://portal.issn.org/cgi-bin/gw/chameleon?sessionid=2017092018102630856&skin=unrestricted&lng=en&inst=consortium&host=localhost%2b5000%2bDEFAULT&patronhost=localhost%205000%20DEFAULT&search=SCAN&function=INITREQ&sourcescreen=CARDSCR&pos=1&rootsearch=3&elementcount=1&u1=43&t1=Sem.%20Acad.%20Pedagog.%20(Univ.%20Fed.%20Piau%c3%ad)&beginsrch=1">Sem. Acad. Pedagog. (Univ. Fed. Piauí)</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Universal Decimal Classification
+                    </td>
+                    <td> <a hre="http://portal.issn.org/cgi-bin/gw/chameleon?sessionid=2017092018102630856&skin=unrestricted&lng=en&inst=consortium&host=localhost%2b5000%2bDEFAULT&patronhost=localhost%205000%20DEFAULT&search=KEYWORD&function=INITREQ&sourcescreen=CARDSCR&pos=1&rootsearch=1&elementcount=1&u1=6019&t1=37&beginsrch=1">37</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        URL
+                    </td>
+                    <td><a href="http://portal.issn.org/cgi-bin/gw/chameleon#">http://saped.net/ </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        ISSN Centre
+                    </td>
+                    <td> 	Brasil
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                    Category 
+                    </td>
+                    <td> Register
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        
         <table class="ui fixed single line celled table" style="margin-top:3em;width:1024px;margin-left:10em;">
             <thead>
                 <tr>
