atualizado expediente e arquivo anais

--- a/app/views/home/expediente.html.erb
+++ b/app/views/home/expediente.html.erb
@@ -1,5 +1,5 @@
 
-<div style="margin-top:5em;min-height:500px;"class="ui text " >
+<div style="margin-top:3em;min-height:500px;"class="ui text " >
     <div class='ui   segment' >
         <div class="ui    grid ">
             <div class="eight wide column" >
@@ -52,6 +52,7 @@
                     <li>Thatianny Jasmine Castro Martins de Carvalho</li>
                 </ul>
             </div>
+            <h5 class="ui center aligned">SEMANA ACADÊMICA DE PEDAGOGIA, 7, 2017, Picos. Anais disponível em <a href="/an">Anais SAPED</a>, Teresina: EDUFPI, 2017.</h5>
         </div>
     </div>
 </div>
