--- a/app/views/home/expediente.html.erb
+++ b/app/views/home/expediente.html.erb
@@ -52,7 +52,7 @@
                     <li>Thatianny Jasmine Castro Martins de Carvalho</li>
                 </ul>
             </div>
-            <h5 class="ui center aligned">SEMANA ACADÊMICA DE PEDAGOGIA, 7, 2017, Picos. Anais disponível em <a href="/an">Anais SAPED</a>, Teresina: EDUFPI, 2017.</h5>
+            <h5 class="ui center aligned" style="margin-top:-1em;">SEMANA ACADÊMICA DE PEDAGOGIA, 7, 2017, Picos. Anais...Teresina: EDUFPI, 2017.</h5>
         </div>
     </div>
 </div>
