--- a/app/views/home/expediente.html.erb
+++ b/app/views/home/expediente.html.erb
@@ -10,8 +10,13 @@
                 Anais da VII Semana Acadêmica de Pedagogia – As (RÉ)formas
                 educacionais e a formação política do professor: velhos embates, novas
                 estratégias. Picos - PI: CSHNB/UFPI, 2017.
+                <br><br>
+                Como citar:
                 </p>
-                
+                <p >
+                    
+                    SEMANA ACADÊMICA DE PEDAGOGIA, 7, 2017, Picos. <B>As (Ré) formas educacionais e a formação política do professor:</B> velhos embates,  novas estratégias. Teresina, 2017. 376p.
+                </p>
                 
                 <h4>Periodicidade do Evento: anual</h4>
                 
@@ -52,7 +57,7 @@
                     <li>Thatianny Jasmine Castro Martins de Carvalho</li>
                 </ul>
             </div>
-            <h5 class="ui center aligned" style="margin-top:-1em;">SEMANA ACADÊMICA DE PEDAGOGIA, 7, 2017, Picos. Anais...Teresina: EDUFPI, 2017.</h5>
+            
         </div>
     </div>
 </div>
